testcases/compiler2015/Phase2/CompileError/lvalue2-5110379024-wuhang.c
/** REMARK: Arrays can not be assigned a value.
 *
**/

int a[4]={1};
int main()
{
    int b[4];
    a=b;
}
